--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,28 @@
 // See https://go.microsoft.com/fwlink/?LinkId=733558
 // for the documentation about the tasks.json format
+
+/**
+{
+    "type": "npm",
+    "script": "watch:esbuild",
+    "group": "build",
+    "problemMatcher": "$tsc-watch",
+    "isBackground": true,
+    "label": "npm: watch:esbuild",
+    "presentation": {
+        "group": "watch",
+        "reveal": "never"
+    }
+},
+ **/
+
 {
 	"version": "2.0.0",
 	"tasks": [
 		{
             "label": "watch",
             "dependsOn": [
-                "npm: watch:tsc",
-                "npm: watch:esbuild"
+                "npm: watch:tsc"
             ],
             "presentation": {
                 "reveal": "never"
@@ -15,18 +30,6 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
-        },
-        {
-            "type": "npm",
-            "script": "watch:esbuild",
-            "group": "build",
-            "problemMatcher": "$esbuild-watch",
-            "isBackground": true,
-            "label": "npm: watch:esbuild",
-            "presentation": {
-                "group": "watch",
-                "reveal": "never"
             }
         },
 		{
