--- a/package.json
+++ b/package.json
@@ -9,13 +9,30 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:yaml",
+    "onLanguage:json",
+    "workspaceContains:buildkite.yml",
+    "workspaceContains:buildkite.yaml",
+    "workspaceContains:buildkite.json",
+    "workspaceContains:buildkite.*.yml",
+    "workspaceContains:buildkite.*.yaml",
+    "workspaceContains:buildkite.yml",
+    "workspaceContains:buildkite.yaml",
+    "workspaceContains:buildkite.json",
+    "workspaceContains:buildkite.*.yml",
+    "workspaceContains:buildkite.*.yaml",
+    "workspaceContains:buildkite.*.json",
+    "workspaceContains:**/.buildkite/pipeline.yml",
+    "workspaceContains:**/.buildkite/pipeline.yaml",
+    "workspaceContains:**/.buildkite/pipeline.json"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
         "command": "buildkite-parse.helloWorld",
-        "title": "Hello World"
+        "title": "Fix Buildkite Pipeline"
       }
     ]
   },
@@ -34,17 +51,21 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.97.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.97.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^9.19.0",
-    "esbuild": "^0.24.2",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.7.3",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.19.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.7.3"
   },
-  "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
+  "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247",
+  "dependencies": {
+    "tree-sitter": "^0.22.4",
+    "tree-sitter-yaml": "^0.5.0"
+  }
 }
