--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buildkite-parse",
   "displayName": "buildkite-parse",
   "description": "",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1",
   "engines": {
     "vscode": "^1.97.0"
   },
