Add schema to build output

--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
       }
     ]
   },
+  "files": [
+    "out/",
+    "src/schemas/*.json"
+  ],
   "publisher": "TheDome",
   "icon": "images/icon.png",
   "scripts": {
