--- a/src/schemas/pipelint.config.json
+++ b/src/schemas/pipelint.config.json
@@ -4,5 +4,5 @@
     "EnvironmentVarRule": true,
     "NoQuotedEnvRule": true
   },
-  "excludedEnvs": ["CI", "PATH"]
+  "whitelistedEnvs": ["CI", "PATH"]
 }
