--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "buildkite-parse",
   "displayName": "Buildkite Pipelint",
-  "description": "",
+  "description": "A simple VSCode extension to validate Buildkite pipeline YAML files.",
   "version": "0.0.5",
   "engines": {
     "vscode": "^1.95.0"
