Add experimental bash parsing

--- a/test/.buildkite/pipeline.yml
+++ b/test/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 env:
-  BUILDKITE_ARTIFACT_UPLOAD_DESTINATION: s3://vivi-buildkite-artifacts/$BUILDKITE_JOB_ID
+  BUILDKITE_ARTIFACT_UPLOAD_DESTINATION: s3://cool-buildkite-artifacts/$BUILDKITE_JOB_ID
   BUILDKITE_S3_DEFAULT_REGION: ap-southeast-2
-  DELETE_DATABASE: 'vivi-primary
+  DELETE_DATABASE: 'cool-primary
   REALLY_COOL_ENVIRONMENT: "super-cool-environment"
 
 steps:
@@ -11,7 +11,7 @@ steps:
       queue: v3
     command: .buildkite/scripts/test.sh
     plugins:
-      - viviedu/docker-compose#dd0a3f4:
+      - cooledu/docker-compose#dd0a3f4:
           config: .buildkite/docker-compose.buildkite.yml
           build: build
           image-repository: ${BUILDKITE_S3_DEFAULT_REGION}/build-cache
