Add optional bashExperimental flag

--- a/src/schemas/pipelint.config.json
+++ b/src/schemas/pipelint.config.json
@@ -4,5 +4,9 @@
     "EnvironmentVarRule": true,
     "NoQuotedEnvRule": true
   },
-  "whitelistedEnvs": ["CI", "PATH"]
+  "whitelistedEnvs": [
+    "CI",
+    "PATH"
+  ],
+  "bashExperimental": false
 }
